# Simple-bot

./: README.md  main.rs  package-lock.json  package.json
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AddNewRule.vue  Details.vue  Disclaimer.vue  Logs.vue  Profiles.vue  SavedRules.vue  Tabs.vue  TopFuncBtns.vue  store.js  store.ts  types.ts
